--- a/plugin.xml
+++ b/plugin.xml
@@ -12,7 +12,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="mainhandler.MainHandler"
+            class="mainhandler.ButtonHandler"
             commandId="commands.t">
       </handler>
    </extension>
