--- a/Tests/plugin.xml
+++ b/Tests/plugin.xml
@@ -12,7 +12,7 @@
    <extension
          point="org.eclipse.ui.handlers">
       <handler
-            class="uihandler.ButtonHandler"
+            class="framework.ButtonHandler"
             commandId="executeTests">
       </handler>
    </extension>
