Add preference settings - Initial version

--- a/Plugin/plugin.xml
+++ b/Plugin/plugin.xml
@@ -33,4 +33,12 @@
          </menu>
       </menuContribution>
    </extension>
+   <extension
+         point="org.eclipse.ui.preferencePages">
+      <page
+            class="mainhandler.PreferenceHandler"
+            id="t2"
+            name="Preferences of ContextUsageSpecification">
+      </page>
+   </extension>
 </plugin>
